<resources>
    <string name="app_name">Mineral Identification</string>
    <string name="mineral_identification">Mineral Identification</string>
    <string name="mineral_and_rock_identification">Mineral and Rock Identification</string>
    <string name="identify_a_mineral">Identify a Mineral</string>
    <string name="identify_a_rock">Identify a Rock</string>
    <string name="_1_5">1/5</string>
    <string name="rmi">RMI</string>
    <string name="rock_mineral_identification">Rock and Mineral Identification</string>
    <string name="identification">Identification</string>
    <string name="rock_mineral_list">Rock and Mineral List</string>
    <string name="properties">Properties</string>
    <string name="color">Color</string>
    <string name="green">Green</string>
    <string name="pink">Pink</string>
    <string name="black">Black</string>
    <string name="blue">Blue</string>
    <string name="gray">Gray</string>
    <string name="colorless">Colorless</string>
    <string name="orange">Orange</string>
    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="brown">Brown</string>
    <string name="yellow">Yellow</string>
    <string name="purple">Purple</string>
    <string name="violet">Violet</string>
    <string name="selection">Selection</string>
    <string name="calci">Calcite</string>
    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="one">1.0</string>
    <string name="onepointone">1.1</string>
    <string name="onepointtwo">1.2</string>
    <string name="onepointthree">1.3</string>
    <string name="onepointfour">1.4</string>
    <string name="onepointfive">1.5</string>
    <string name="onepointsix">1.6</string>
    <string name="onepointseven">1.7</string>
    <string name="onepointeight">1.8</string>
    <string name="onepointnine">1.9</string>
    <string name="two">2.0</string>
    <string name="twopointone">2.1</string>
    <string name="twopointtwo">2.2</string>
    <string name="twopointthree">2.3</string>
    <string name="twopointfour">2.4</string>
    <string name="twopointfive">2.5</string>
    <string name="twopointsix">2.6</string>
    <string name="twopointseven">2.7</string>
    <string name="twopointeight">2.8</string>
    <string name="twopointnine">2.9</string>
    <string name="three">3.0</string>
    <string name="threepointone">3.1</string>
    <string name="threepointtwo">3.2</string>
    <string name="threepointthree">3.3</string>
    <string name="threepointfour">3.4</string>
    <string name="threepointfive">3.5</string>
    <string name="threepointsix">3.6</string>
    <string name="threepointseven">3.7</string>
    <string name="threepointeight">3.8</string>
    <string name="threepointnine">3.9</string>
    <string name="four">4.0</string>
    <string name="fourpointone">4.1</string>
    <string name="fourpointtwo">4.2</string>
    <string name="fourpointthree">4.3</string>
    <string name="fourpointfour">4.4</string>
    <string name="fourpointfive">4.5</string>
    <string name="fourpointsix">4.6</string>
    <string name="fourpointseven">4.7</string>
    <string name="fourpointeight">4.8</string>
    <string name="fourpointnine">4.9</string>
    <string name="five">5.0</string>
    <string name="fivepointone">5.1</string>
    <string name="fivepointtwo">5.2</string>
    <string name="fivepointthree">5.3</string>
    <string name="fivepointfour">5.4</string>
    <string name="fivepointfive">5.5</string>
    <string name="fivepointsix">5.6</string>
    <string name="fivepointseven">5.7</string>
    <string name="fivepointeight">5.8</string>
    <string name="fivepointnine">5.9</string>
    <string name="six">6.0</string>
    <string name="sixpointone">6.1</string>
    <string name="sixpointtwo">6.2</string>
    <string name="sixpointthree">6.3</string>
    <string name="sixpointfour">6.4</string>
    <string name="sixpointfive">6.5</string>
    <string name="sixpointsix">6.6</string>
    <string name="sixpointseven">6.7</string>
    <string name="sixpointeight">6.8</string>
    <string name="sixpointnine">6.9</string>
    <string name="seven">7.0</string>
    <string name="sevenpointone">7.1</string>
    <string name="sevenpointtwo">7.2</string>
    <string name="sevenpointthree">7.3</string>
    <string name="sevenpointfour">7.4</string>
    <string name="sevenpointfive">7.5</string>
    <string name="sevenpointsix">7.6</string>
    <string name="sevenpointseven">7.7</string>
    <string name="sevenpointeight">7.8</string>
    <string name="sevenpointnine">7.9</string>
    <string name="eight">8.0</string>
    <string name="eightpointone">8.1</string>
    <string name="eightpointtwo">8.2</string>
    <string name="eightpointthree">8.3</string>
    <string name="eightpointfour">8.4</string>
    <string name="eightpointfive">8.5</string>
    <string name="eightpointsix">8.6</string>
    <string name="eightpointseven">8.7</string>
    <string name="eightpointeight">8.8</string>
    <string name="eightpointnine">8.9</string>
    <string name="nine">9.0</string>
    <string name="ninepointone">9.1</string>
    <string name="ninepointtwo">9.2</string>
    <string name="ninepointthree">9.3</string>
    <string name="ninepointfour">9.4</string>
    <string name="ninepointfive">9.5</string>
    <string name="ninepointsix">9.6</string>
    <string name="ninepointseven">9.7</string>
    <string name="ninepointeight">9.8</string>
    <string name="ninepointnine">9.9</string>
    <string name="ten">10.0</string>
    <string name="tenpointone">10.1</string>
    <string name="tenpointtwo">10.2</string>
    <string name="tenpointthree">10.3</string>
    <string name="tenpointfour">10.4</string>
    <string name="tenpointfive">10.5</string>
    <string name="tenpointsix">10.6</string>
    <string name="tenpointseven">10.7</string>
    <string name="tenpointeight">10.8</string>
    <string name="tenpointnine">10.9</string>
    <string name="eleven">11.0</string>
    <string name="elevenpointone">11.1</string>
    <string name="elevenpointtwo">11.2</string>
    <string name="elevenpointthree">11.3</string>
    <string name="elevenpointfour">11.4</string>
    <string name="elevenpointfive">11.5</string>
    <string name="elevenpointsix">11.6</string>
    <string name="elevenpointseven">11.7</string>
    <string name="elevenpointeight">11.8</string>
    <string name="elevenpointnine">11.9</string>
    <string name="twelve">12.0</string>
    <string name="twelvepointone">12.1</string>
    <string name="twelvepointtwo">12.2</string>
    <string name="twelvepointthree">12.3</string>
    <string name="twelvepointfour">12.4</string>
    <string name="twelvepointfive">12.5</string>
    <string name="twelvepointsix">12.6</string>
    <string name="twelvepointseven">12.7</string>
    <string name="twelvepointeight">12.8</string>
    <string name="twelvepointnine">12.9</string>
    <string name="thirteen">13.0</string>
    <string name="thirteenpointone">13.1</string>
    <string name="thirteenpointtwo">13.2</string>
    <string name="thirteenpointthree">13.3</string>
    <string name="thirteenpointfour">13.4</string>
    <string name="thirteenpointfive">13.5</string>
    <string name="thirteenpointsix">13.6</string>
    <string name="thirteenpointseven">13.7</string>
    <string name="thirteenpointeight">13.8</string>
    <string name="thirteenpointnine">13.9</string>
    <string name="fourteen">14.0</string>
    <string name="fourteenpointone">14.1</string>
    <string name="fourteenpointtwo">14.2</string>
    <string name="fourteenpointthree">14.3</string>
    <string name="fourteenpointfour">14.4</string>
    <string name="fourteenpointfive">14.5</string>
    <string name="fourteenpointsix">14.6</string>
    <string name="fourteenpointseven">14.7</string>
    <string name="fourteenpointeight">14.8</string>
    <string name="fourteenpointnine">14.9</string>
    <string name="fifteen">15.0</string>
    <string name="fifteenpointone">15.1</string>
    <string name="fifteenpointtwo">15.2</string>
    <string name="fifteenpointthree">15.3</string>
    <string name="fifteenpointfour">15.4</string>
    <string name="fifteenpointfive">15.5</string>
    <string name="fifteenpointsix">15.6</string>
    <string name="fifteenpointseven">15.7</string>
    <string name="fifteenpointeight">15.8</string>
    <string name="fifteenpointnine">15.9</string>
    <string name="sixteen">16.0</string>
    <string name="sixteenpointone">16.1</string>
    <string name="sixteenpointtwo">16.2</string>
    <string name="sixteenpointthree">16.3</string>
    <string name="sixteenpointfour">16.4</string>
    <string name="sixteenpointfive">16.5</string>
    <string name="sixteenpointsix">16.6</string>
    <string name="sixteenpointseven">16.7</string>
    <string name="sixteenpointeight">16.8</string>
    <string name="sixteenpointnine">16.9</string>
    <string name="seventeen">17.0</string>
    <string name="seventeenpointone">17.1</string>
    <string name="seventeenpointtwo">17.2</string>
    <string name="seventeenpointthree">17.3</string>
    <string name="seventeenpointfour">17.4</string>
    <string name="seventeenpointfive">17.5</string>
    <string name="seventeenpointsix">17.6</string>
    <string name="seventeenpointseven">17.7</string>
    <string name="seventeenpointeight">17.8</string>
    <string name="seventeenpointnine">17.9</string>
    <string name="eighteen">18.0</string>
    <string name="eighteenpointone">18.1</string>
    <string name="eighteenpointtwo">18.2</string>
    <string name="eighteenpointthree">18.3</string>
    <string name="eighteenpointfour">18.4</string>
    <string name="eighteenpointfive">18.5</string>
    <string name="eighteenpointsix">18.6</string>
    <string name="eighteenpointseven">18.7</string>
    <string name="eighteenpointeight">18.8</string>
    <string name="eighteenpointnine">18.9</string>
    <string name="nineteen">19.0</string>
    <string name="nineteenpointone">19.1</string>
    <string name="nineteenpointtwo">19.2</string>
    <string name="nineteenpointthree">19.3</string>
    <string name="nineteenpointfour">19.4</string>
    <string name="nineteenpointfive">19.5</string>
    <string name="nineteenpointsix">19.6</string>
    <string name="nineteenpointseven">19.7</string>
    <string name="nineteenpointeight">19.8</string>
    <string name="nineteenpointnine">19.9</string>
    <string name="twenty">20.0</string>
    <string name="twentypointone">20.1</string>
    <string name="twentypointtwo">20.2</string>
    <string name="twentypointthree">20.3</string>
    <string name="twentypointfour">20.4</string>
    <string name="twentypointfive">20.5</string>
    <string name="twentypointsix">20.6</string>
    <string name="twentypointseven">20.7</string>
    <string name="twentypointeight">20.8</string>
    <string name="twentypointnine">20.9</string>
    <string name="composition">Composition</string>
    <string name="quartz">Quartz</string>
    <string name="k_feldspar">K-Feldspar</string>
    <string name="P_feldspar">P-Feldspar</string>
    <string name="pyroxene">Pyroxene</string>
    <string name="hornblende">Hornblende</string>
    <string name="amphibole">Amphibole</string>
    <string name="biotite">Biotite</string>
    <string name="olivine">Olivine</string>
    <string name="bauxite">Bauxite</string>
    <string name="pyrite">Pyrite</string>
    <string name="uranium">Uranium</string>
    <string name="vermiculite">Vermiculite</string>
    <string name="gold">Gold</string>
    <string name="corundum">Corundum</string>
    <string name="apatite">Apatite</string>
    <string name="chlorite">Chlorite</string>
    <string name="zircon">Zircon</string>
    <string name="andesine">Andesine</string>
    <string name="cordierite">Cordierite</string>
    <string name="tremolite">Tremolite</string>
    <string name="zeropointnine">0.9</string>
    <string name="silver">Silver</string>
</resources>