<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/zeropointnine"/>
    <item android:title="@string/one"/>
    <item android:title="@string/onepointone"/>
    <item android:title="@string/onepointtwo"/>
    <item android:title="@string/onepointthree"/>
    <item android:title="@string/onepointfour"/>
    <item android:title="@string/onepointfive"/>
    <item android:title="@string/onepointsix"/>
    <item android:title="@string/onepointseven"/>
    <item android:title="@string/onepointeight"/>
    <item android:title="@string/onepointnine"/>
    <item android:title="@string/two"/>
    <item android:title="@string/twopointone"/>
    <item android:title="@string/twopointtwo"/>
    <item android:title="@string/twopointthree"/>
    <item android:title="@string/twopointfour"/>
    <item android:title="@string/twopointfive"/>
    <item android:title="@string/twopointsix"/>
    <item android:title="@string/twopointseven"/>
    <item android:title="@string/twopointeight"/>
    <item android:title="@string/twopointnine"/>
    <item android:title="@string/three"/>
    <item android:title="@string/threepointone"/>
    <item android:title="@string/threepointtwo"/>
    <item android:title="@string/threepointthree"/>
    <item android:title="@string/threepointfour"/>
    <item android:title="@string/threepointfive"/>
    <item android:title="@string/threepointsix"/>
    <item android:title="@string/threepointseven"/>
    <item android:title="@string/threepointeight"/>
    <item android:title="@string/threepointnine"/>
    <item android:title="@string/four"/>
    <item android:title="@string/fourpointone"/>
    <item android:title="@string/fourpointtwo"/>
    <item android:title="@string/fourpointthree"/>
    <item android:title="@string/fourpointfour"/>
    <item android:title="@string/fourpointfive"/>
    <item android:title="@string/fourpointsix"/>
    <item android:title="@string/fourpointseven"/>
    <item android:title="@string/fourpointeight"/>
    <item android:title="@string/fourpointnine"/>
    <item android:title="@string/five"/>
    <item android:title="@string/fivepointone"/>
    <item android:title="@string/fivepointtwo"/>
    <item android:title="@string/fivepointthree"/>
    <item android:title="@string/fivepointfour"/>
    <item android:title="@string/fivepointfive"/>
    <item android:title="@string/fivepointsix"/>
    <item android:title="@string/fivepointseven"/>
    <item android:title="@string/fivepointeight"/>
    <item android:title="@string/fivepointnine"/>
    <item android:title="@string/six"/>
    <item android:title="@string/sixpointone"/>
    <item android:title="@string/sixpointtwo"/>
    <item android:title="@string/sixpointthree"/>
    <item android:title="@string/sixpointfour"/>
    <item android:title="@string/sixpointfive"/>
    <item android:title="@string/sixpointsix"/>
    <item android:title="@string/sixpointseven"/>
    <item android:title="@string/sixpointeight"/>
    <item android:title="@string/sixpointnine"/>
    <item android:title="@string/seven"/>
    <item android:title="@string/sevenpointone"/>
    <item android:title="@string/sevenpointtwo"/>
    <item android:title="@string/sevenpointthree"/>
    <item android:title="@string/sevenpointfour"/>
    <item android:title="@string/sevenpointfive"/>
    <item android:title="@string/sevenpointsix"/>
    <item android:title="@string/sevenpointseven"/>
    <item android:title="@string/sevenpointeight"/>
    <item android:title="@string/sevenpointnine"/>
    <item android:title="@string/eight"/>
    <item android:title="@string/eightpointone"/>
    <item android:title="@string/eightpointtwo"/>
    <item android:title="@string/eightpointthree"/>
    <item android:title="@string/eightpointfour"/>
    <item android:title="@string/eightpointfive"/>
    <item android:title="@string/eightpointsix"/>
    <item android:title="@string/eightpointseven"/>
    <item android:title="@string/eightpointeight"/>
    <item android:title="@string/eightpointnine"/>
    <item android:title="@string/nine"/>
    <item android:title="@string/ninepointone"/>
    <item android:title="@string/ninepointtwo"/>
    <item android:title="@string/ninepointthree"/>
    <item android:title="@string/ninepointfour"/>
    <item android:title="@string/ninepointfive"/>
    <item android:title="@string/ninepointsix"/>
    <item android:title="@string/ninepointseven"/>
    <item android:title="@string/ninepointeight"/>
    <item android:title="@string/ninepointnine"/>
    <item android:title="@string/ten"/>
    <item android:title="@string/tenpointone"/>
    <item android:title="@string/tenpointtwo"/>
    <item android:title="@string/tenpointthree"/>
    <item android:title="@string/tenpointfour"/>
    <item android:title="@string/tenpointfive"/>
    <item android:title="@string/tenpointsix"/>
    <item android:title="@string/tenpointseven"/>
    <item android:title="@string/tenpointeight"/>
    <item android:title="@string/tenpointnine"/>
    <item android:title="@string/eleven"/>
    <item android:title="@string/elevenpointone"/>
    <item android:title="@string/elevenpointtwo"/>
    <item android:title="@string/elevenpointthree"/>
    <item android:title="@string/elevenpointfour"/>
    <item android:title="@string/elevenpointfive"/>
    <item android:title="@string/elevenpointsix"/>
    <item android:title="@string/elevenpointseven"/>
    <item android:title="@string/elevenpointeight"/>
    <item android:title="@string/elevenpointnine"/>
    <item android:title="@string/twelve"/>
    <item android:title="@string/twelvepointone"/>
    <item android:title="@string/twelvepointtwo"/>
    <item android:title="@string/twelvepointthree"/>
    <item android:title="@string/twelvepointfour"/>
    <item android:title="@string/twelvepointfive"/>
    <item android:title="@string/twelvepointsix"/>
    <item android:title="@string/twelvepointseven"/>
    <item android:title="@string/twelvepointeight"/>
    <item android:title="@string/twelvepointnine"/>
    <item android:title="@string/thirteen"/>
    <item android:title="@string/thirteenpointone"/>
    <item android:title="@string/thirteenpointtwo"/>
    <item android:title="@string/thirteenpointthree"/>
    <item android:title="@string/thirteenpointfour"/>
    <item android:title="@string/thirteenpointfive"/>
    <item android:title="@string/thirteenpointsix"/>
    <item android:title="@string/thirteenpointseven"/>
    <item android:title="@string/thirteenpointeight"/>
    <item android:title="@string/thirteenpointnine"/>
    <item android:title="@string/fourteen"/>
    <item android:title="@string/fourteenpointone"/>
    <item android:title="@string/fourteenpointtwo"/>
    <item android:title="@string/fourteenpointthree"/>
    <item android:title="@string/fourteenpointfour"/>
    <item android:title="@string/fourteenpointfive"/>
    <item android:title="@string/fourteenpointsix"/>
    <item android:title="@string/fourteenpointseven"/>
    <item android:title="@string/fourteenpointeight"/>
    <item android:title="@string/fourteenpointnine"/>
    <item android:title="@string/fifteen"/>
    <item android:title="@string/fifteenpointone"/>
    <item android:title="@string/fifteenpointtwo"/>
    <item android:title="@string/fifteenpointthree"/>
    <item android:title="@string/fifteenpointfour"/>
    <item android:title="@string/fifteenpointfive"/>
    <item android:title="@string/fifteenpointsix"/>
    <item android:title="@string/fifteenpointseven"/>
    <item android:title="@string/fifteenpointeight"/>
    <item android:title="@string/fifteenpointnine"/>
    <item android:title="@string/sixteen"/>
    <item android:title="@string/sixteenpointone"/>
    <item android:title="@string/sixteenpointtwo"/>
    <item android:title="@string/sixteenpointthree"/>
    <item android:title="@string/sixteenpointfour"/>
    <item android:title="@string/sixteenpointfive"/>
    <item android:title="@string/sixteenpointsix"/>
    <item android:title="@string/sixteenpointseven"/>
    <item android:title="@string/sixteenpointeight"/>
    <item android:title="@string/sixteenpointnine"/>
    <item android:title="@string/seventeen"/>
    <item android:title="@string/seventeenpointone"/>
    <item android:title="@string/seventeenpointtwo"/>
    <item android:title="@string/seventeenpointthree"/>
    <item android:title="@string/seventeenpointfour"/>
    <item android:title="@string/seventeenpointfive"/>
    <item android:title="@string/seventeenpointsix"/>
    <item android:title="@string/seventeenpointseven"/>
    <item android:title="@string/seventeenpointeight"/>
    <item android:title="@string/seventeenpointnine"/>
    <item android:title="@string/eighteen"/>
    <item android:title="@string/eighteenpointone"/>
    <item android:title="@string/eighteenpointtwo"/>
    <item android:title="@string/eighteenpointthree"/>
    <item android:title="@string/eighteenpointfour"/>
    <item android:title="@string/eighteenpointfive"/>
    <item android:title="@string/eighteenpointsix"/>
    <item android:title="@string/eighteenpointseven"/>
    <item android:title="@string/eighteenpointeight"/>
    <item android:title="@string/eighteenpointnine"/>
    <item android:title="@string/nineteen"/>
    <item android:title="@string/nineteenpointone"/>
    <item android:title="@string/nineteenpointtwo"/>
    <item android:title="@string/nineteenpointthree"/>
    <item android:title="@string/nineteenpointfour"/>
    <item android:title="@string/nineteenpointfive"/>
    <item android:title="@string/nineteenpointsix"/>
    <item android:title="@string/nineteenpointseven"/>
    <item android:title="@string/nineteenpointeight"/>
    <item android:title="@string/nineteenpointnine"/>
    <item android:title="@string/twenty"/>
    <item android:title="@string/twentypointone"/>
    <item android:title="@string/twentypointtwo"/>
    <item android:title="@string/twentypointthree"/>
    <item android:title="@string/twentypointfour"/>
    <item android:title="@string/twentypointfive"/>
    <item android:title="@string/twentypointsix"/>
    <item android:title="@string/twentypointseven"/>
    <item android:title="@string/twentypointeight"/>
    <item android:title="@string/twentypointnine"/>

</menu>