<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/one"/>
    <item android:title="@string/onepointfive"/>
    <item android:title="@string/two"/>
    <item android:title="@string/twopointfive"/>
    <item android:title="@string/three"/>
    <item android:title="@string/threepointfive"/>
    <item android:title="@string/four"/>
    <item android:title="@string/fourpointfive"/>
    <item android:title="@string/five"/>
    <item android:title="@string/fivepointfive"/>
    <item android:title="@string/six"/>
    <item android:title="@string/sixpointfive"/>
    <item android:title="@string/seven"/>
    <item android:title="@string/sevenpointfive"/>
    <item android:title="@string/eight"/>
    <item android:title="@string/eightpointfive"/>
    <item android:title="@string/nine"/>
    <item android:title="@string/ninepointfive"/>
    <item android:title="@string/ten"/>

</menu>